--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="script.js"></script>
   </head>
   <body>
+    
+    <img src="23242190.png" alt="splork" height="" width="">
    
     <img src="dynamism.github.io/23242190.png">
     
