--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
     <img src="23242190.png" height="200" width="200" align="left"alt="splork">
    
-    <div style="position: absolute; top: 30%px; left: 60%; width: 240px; background-color: 666666;">
+    <div style="position: absolute; top: 20%; left: 00%; width: 50%; background-color: 666666;">
      <p style="color:#000000";>splork</p>
     </div>
       
