--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="23242190.png" height="200" width="200" align="left" alt="splork">
    
     <div style="position: absolute; top: 20%; left: 00%; width: 50%; background-color: 666666;">
-      <p style="color:#000000";><font face = "Verdana">splork</font></p>
+      <p style="color:#0000FF";><font face = "Verdana">splork</font></p>
     </div>
       
       
