--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <comment>
   <center>
   
-      <p style="color:#000000";><font face = "Arial,Helvetica">splork</font></p>
+      <p style="color:#000000";><font face = "Arial,Helvetica"></font></p>
     
   </center>
   </comment>
