--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <label for="show-menu" class="show-menu">Show Menu</label>
     <input type="checkbox" id="show-menu" role="button">
     
-    <img src="23242190.png" height="200" width="200" align="left" alt="splork">
+    <img src="23242190.png" height="200" width="200" align="right" alt="splork">
    
     
     <ul id="menu">
-        <li><a href="#">Home</a></li>
+        <li><a href="#">index</a></li>
         <li>
-            <a href="#">About ï¿¬</a>
+            <a href="#">dev</a>
             <ul class="hidden">
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">What We Do</a></li>
+                <li><a href="#">python</a></li>
+                <li><a href="#">R</a></li>
             </ul>
         </li>
         <li>
             <a href="#">Portfolio ï¿¬</a>
             <ul class="hidden">
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Web & User Interface Design</a></li>
-                <li><a href="#">Illustration</a></li>
+                <li><a href="#">BASH</a></li>
+                <li><a href="#">go</a></li>
+                <li><a href="#">machine</a></li>
             </ul>
         </li>
         <li><a href="#">News</a></li>
