--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>dynamism</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="splork.js"></script>
     
     <nav role='navigation'>
     <a href="#" id="toggle">=</a>
