--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     
   </head>
   <body>
-    
-    <div class="wrapper">
+  
+  <div align="right">
+  <div class="wrapper">
   <div class="menu">
     <span></span>
     <span></span>
