--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       
 <form>
-<input style="width: 50px; padding: 20px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: #000000; color: #fff; border-radius: 10px; border: 1px solid #999; font-size: 150%;" type="button" value="|||" onclick="window.location.href='https://dynamism.github.io/'" />
+<input style="width: 150px; padding: 10px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: #000000; color: #fff; border-radius: 10px; border: 1px solid #999; font-size: 100%;" type="button" value="code" onclick="window.location.href='https://dynamism.github.io/'" />
 </form>
     
 <form>
