--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
   <body>
     
 
-
+<div class="horizontalcssmenu">
+<ul id="cssmenu1">
+<li style="border-left: 1px solid #202020;"><a href="http://www.javascriptkit.com/">Home</a></li>
+<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" >Free JS</a></li>
+<li><a href="http://www.javascriptkit.com/">JS Tutorials</a></li>
+<li><a href="#">References</a>
+    <ul>
+    <li><a href="http://www.javascriptkit.com/jsref/">JS Reference</a></li>
+    <li><a href="http://www.javascriptkit.com/domref/">DOM Reference</a></li>
+    <li><a href="http://www.javascriptkit.com/dhtmltutors/cssreference.shtml">CSS Reference</a></li>
+    </ul>
+</li>
 
     
     <a href = "index.html"><img src="og.png" height="50" width="50" align="left" alt="OG">
