--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
   <center>
 <div class="horizontalcssmenu">
 <ul id="cssmenu1">
-<li style="border-left: 1px solid #202020;"><a href="http://www.javascriptkit.com/">Home</a></li>
-<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" >Free JS</a></li>
-<li><a href="http://www.javascriptkit.com/">JS Tutorials</a></li>
+<li style="border-left: 1px solid #202020;"><a href="index.html">node</a></li>
+<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" >code</a></li>
+<li><a href="http://www.javascriptkit.com/">payload</a></li>
 <li><a href="#">References</a>
     <ul>
-    <li><a href="http://www.javascriptkit.com/jsref/">JS Reference</a></li>
-    <li><a href="http://www.javascriptkit.com/domref/">DOM Reference</a></li>
-    <li><a href="http://www.javascriptkit.com/dhtmltutors/cssreference.shtml">CSS Reference</a></li>
+    <li><a href="http://www.javascriptkit.com/jsref/">deep neural networks</a></li>
+    <li><a href="http://www.javascriptkit.com/domref/">boltzmann machine</a></li>
+    <li><a href="http://www.javascriptkit.com/dhtmltutors/cssreference.shtml">Reference</a></li>
     </ul>
 </li>
   </center>
