--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <input style="width: 150px; padding: 10px; cursor: pointer; box-shadow: 6px 6px 5px; #999; -webkit-box-shadow: 6px 6px 5px #999; -moz-box-shadow: 6px 6px 5px #999; font-weight: bold; background: #000000; color: #fff; border-radius: 10px; border: 1px solid #999; font-size: 100%;" type="button" value="code" onclick="window.location.href='https://dynamism.github.io/'" />
 </form>
 
-<input type="image" src="left.jpg" border=0 name="Change" onclick="window.history.back()">
+<input type="image" src="left.png" border=0 name="Change" onclick="window.history.back()">
  </div>
 
 &#32;</p>
