--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ width: auto;
 }
 
 .wireframemenu a:hover{
-background-color: #F8FBBD;
-color: black;
+background-color: #000000;
+color: white;
 }
 
 </style>
