--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ window.attachEvent("onload", getmenuoffsetY)
 
     
 <div style="position: absolute; top: 250px; left: 50px; width: 50%; background-color: 666666;">
-  </div>
+  
+</div>
+	
    &nbsp;
   
 <p style="color:#000000";><font face = "Arial,Helvetica">this is a test</font></p>
@@ -141,6 +143,27 @@ window.attachEvent("onload", getmenuoffsetY)
    &nbsp;
    &nbsp;
    &nbsp;
+	
+ <table>
+  <colgroup>
+    <col>
+    <col style="background-color: white">
+  </colgroup>
+  <tr>
+    <th>Data 1</th>
+    <th>Data 2</th>
+  </tr>
+  <tr>
+    <td>Calcutta</td>
+    <td>Orange</td>
+  </tr>
+  <tr>
+    <td>Robots</td>
+    <td>Jazz</td>
+  </tr>
+</table>
+
+	
    &nbsp;
    &nbsp;
       
