--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ window.attachEvent("onload", getmenuoffsetY)
 <div id="staticmenu" class="wireframemenu" style="left: 10px; top: 20px">
 <ul>
 <li><a href="index.html">index</a></li>
-<li><a href="http://www.dynamicdrive.com/style/">neuron</a></li>
-<li><a href="http://www.dynamicdrive.com/forums/">deep neural network</a></li>
-<li><a href="http://tools.dynamicdrive.com/imageoptimizer/">Boltzmann machine</a></li>
-<li><a href="http://tools.dynamicdrive.com/favicon/">noize</a></li>
-<li><a href="http://tools.dynamicdrive.com/button/">about</a></li>
+<li><a href="http://">neuron</a></li>
+<li><a href="http://">deep neural network</a></li>
+<li><a href="http://">Boltzmann machine</a></li>
+<li><a href="http://">noize</a></li>
+<li><a href="http://">about</a></li>
 </ul>
 </div>
       
@@ -146,20 +146,12 @@ window.attachEvent("onload", getmenuoffsetY)
 	
  <table>
 
-    <col style="background-color: white">
+  <col style="background-color: white">
  
   <tr>
-    <th>Data 1</th>
-    <th>Data 2</th>
+   <p style="color:#000000";><font face = "Arial,Helvetica"> this is a test</font></p>
   </tr>
-  <tr>
-    <td>Calcutta</td>
-    <td>Orange</td>
-  </tr>
-  <tr>
-    <td>Robots</td>
-    <td>Jazz</td>
-  </tr>
+ 
 </table>
 
 	
