--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	li a {
 		display: block;
 		width:80%;
-		background:#ddd;
+		background:#fff;
 		padding:4% 10%;
 		font-size:1.35em;
 		text-decoration: none;
@@ -35,7 +35,7 @@
 		#menu {
 			width:1.4em;
 			display: block;
-			background:#ddd;
+			background:#fff;
 			font-size:1.35em;
 			text-align: center;
 		}
@@ -60,9 +60,9 @@
 </head>
 <body>
 <ul id="nav">
-	<li><a href="#">Home</a></li>
-	<li><a href="#">About</a></li>
-	<li><a href="#">Contact</a></li>
+	<li><a href="#"></></a></li>
+	<li><a href="#">hmm</a></li>
+	<li><a href="#">locate</a></li>
 </ul>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript">
