--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 	</style>
 </head>
 <body>
+	<p style="color:#000000";><font face = "Arial,Helvetica">
 <ul id="nav">
 	<li><a href="#"></></a></li>
 	<li><a href="#">hmm</a></li>
@@ -76,7 +77,7 @@
 		}
 	});
 </script>
-	
+	</font>
 <a href = "index.html"><img src="og.png" height="50" width="50" align="left" alt="OG"></a>
 <a href = "index.html"><img src="23242190.png" height="50" width="50" align="right" alt="splork"></a>
  
