--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <body>
 	<p style="color:#000000";><font face = "Arial,Helvetica">
 <ul id="nav">
-	<li><a href="#"></></a></li>
-	<li><a href="#">hmm</a></li>
-	<li><a href="#">locate</a></li>
+	<li><a href="index.html">index</a></li>
+	<li><a href="hmm.html">hmm</a></li>
+	<li><a href="spiral.html">locate</a></li>
 </ul>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript">
