--- a/index.html
+++ b/index.html
@@ -83,21 +83,13 @@
 </script>
 	</font>
 
- &nbsp;
-      &nbsp;
-&nbsp;
-         &nbsp;
-&nbsp;
-      &nbsp;
-		&nbsp;
-&nbsp;
+
       &nbsp;
              &nbsp;
-      
+      <div style="position: absolute; top: 250px; left: 50px; width: 50%; background-color: ffffff;">
         <input type="image" src="left.png" height=20" width="20" align="left" alt="history -1" border=0 name="Change" onclick="window.history.back()">
- 
-                                                                                                                                             
-                                                                                                                                             </div>
+																		     </div>
+      </div>
 
  &nbsp;
 
