--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	}
 	</style>
 </head>
-<body>
+<body link="000000">
 	
 	<a href = "index.html"><img src="og.png" height="50" width="50" align="left" alt="OG"></a>
         <a href = "index.html"><img src="23242190.png" height="50" width="50" align="right" alt="splork"></a>
