--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
 
  &nbsp;
 
+<table>
+
+  <col style="background-color: white">
+ 
+  <tr>
+   <p style="color:#000000";><font face = "Arial,Helvetica"></font></p>
+  </tr>
+ 
+</table>																		     
 	
 </body>
 </html>
