--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.css">
     <link rel="stylesheet" href="test.css">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Slideout tests</title>
   </head>
   <body>
