--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!--[if IE 8]><html class="ie8 lt-ie10"><![endif]-->
 <!--[if IE 9]><html class="ie9 lt-ie10"><![endif]-->
 <!--[if gt IE 9]><!--><html lang="en"><!--<![endif]-->
+  
+  <title>dyne</title>
+  
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.css">
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="index.css">
-    <title>Slideout tests</title>
+    <title>noise</title>
   </head>
   <body>
 
