--- a/index.html
+++ b/index.html
@@ -1,111 +1,76 @@
 <!doctype html>
-<!--[if IE 8]><html class="ie8 lt-ie10"><![endif]-->
-<!--[if IE 9]><html class="ie9 lt-ie10"><![endif]-->
-<!--[if gt IE 9]><!--><html lang="en"><!--<![endif]-->
-  
-  <title>dyne</title>
-  
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>dyne</title>
     <meta http-equiv="cleartype" content="on">
     <meta name="MobileOptimized" content="320">
     <meta name="HandheldFriendly" content="True">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.css">
-    <link rel="stylesheet" href="test.css">
-    <link rel="stylesheet" href="index.css">
-    <title>noise</title>
+    <style>
+      body {
+        width: 100%;
+        height: 100%;
+      }
+
+      .slideout-menu {
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 0;
+        width: 256px;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+        display: none;
+      }
+
+      .slideout-panel {
+        position: relative;
+        z-index: 1;
+        will-change: transform;
+      }
+
+      .slideout-open,
+      .slideout-open body,
+      .slideout-open .slideout-panel {
+        overflow: hidden;
+      }
+
+      .slideout-open .slideout-menu {
+        display: block;
+      }
+    </style>
   </head>
   <body>
 
-    <nav id="menu" class="menu">
-      <a href="https://github.com/mango/slideout" target="_blank">
-        <header class="menu-header">
-          <span class="menu-header-title">Tests</span>
-        </header>
-      </a>
-
-      <section class="menu-section">
-        <h3 class="menu-section-title">Docs</h3>
-        <ul class="menu-section-list">
-          <li><a href="https://github.com/mango/slideout#installation" target="_blank">Installation</a></li>
-          <li><a href="https://github.com/mango/slideout#usage" target="_blank">Usage</a></li>
-          <li><a href="https://github.com/mango/slideout#api" target="_blank">API</a></li>
-          <li><a href="https://github.com/mango/slideout#npm-scripts" target="_blank">npm-scripts</a></li>
-        </ul>
-      </section>
-
-      <section class="menu-section">
-        <h3 class="menu-section-title">Docs</h3>
-        <ul class="menu-section-list">
-          <li><a href="https://github.com/mango/slideout#installation" target="_blank">Installation</a></li>
-          <li><a href="https://github.com/mango/slideout#usage" target="_blank">Usage</a></li>
-          <li><a href="https://github.com/mango/slideout#api" target="_blank">API</a></li>
-          <li><a href="https://github.com/mango/slideout#npm-scripts" target="_blank">npm-scripts</a></li>
-        </ul>
-      </section>
-
-      <section class="menu-section">
-        <h3 class="menu-section-title">Docs</h3>
-        <ul class="menu-section-list">
-          <li><a href="https://github.com/mango/slideout#installation" target="_blank">Installation</a></li>
-          <li><a href="https://github.com/mango/slideout#usage" target="_blank">Usage</a></li>
-          <li><a href="https://github.com/mango/slideout#api" target="_blank">API</a></li>
-          <li><a href="https://github.com/mango/slideout#npm-scripts" target="_blank">npm-scripts</a></li>
-        </ul>
-      </section>
-
-      <section class="menu-section">
-        <h3 class="menu-section-title">Docs</h3>
-        <ul class="menu-section-list">
-          <li><a href="https://github.com/mango/slideout#installation" target="_blank">Installation</a></li>
-          <li><a href="https://github.com/mango/slideout#usage" target="_blank">Usage</a></li>
-          <li><a href="https://github.com/mango/slideout#api" target="_blank">API</a></li>
-          <li><a href="https://github.com/mango/slideout#npm-scripts" target="_blank">npm-scripts</a></li>
-        </ul>
-      </section>
+    <nav id="menu">
+      <h2>nav</h2>
     </nav>
 
-    <main id="panel" class="panel">
-      <header class="panel-header">
-        <button class="btn-hamburger js-slideout-toggle"></button>
-        <h1 class="title">Slideout.js</h1>
+    <main id="panel">
+      <header>
+        <button class="toggle-button">☰</button>
+        <h2>locate</h2>
       </header>
-
-      <section class="box">
-        <h2 class="box-title">Test</h2>
-        <div id="mocha" class="box-content"></div>
-      </section>
-
-      <footer class="panel-footer">
-        <p>with <span class="heart">❤</span> by <a href="https://getmango.com/en" target="_blank">Mango</a></p>
-      </footer>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.js"></script>
-    <script>
-      mocha.setup('bdd');
-      var exports = null;
-      function assert(expr, msg) {
-        if (!expr) throw new Error(msg || 'failed');
-      }
-    </script>
-    <script src="../dist/slideout.js"></script>
     <script src="test.js"></script>
     <script>
-      window.onload = function() {
-        document.querySelector('.js-slideout-toggle').addEventListener('click', function() {
-          slideout.toggle();
-        });
+      var slideout = new Slideout({
+        'panel': document.getElementById('panel'),
+        'menu': document.getElementById('menu'),
+        'padding': 256,
+        'tolerance': 70
+      });
 
-        document.querySelector('.menu').addEventListener('click', function(eve) {
-          if (eve.target.nodeName === 'A') { slideout.close(); }
-        });
-
-        var runner = mocha.run();
-      };
+      // Toggle button
+      document.querySelector('.toggle-button').addEventListener('click', function() {
+        slideout.toggle();
+      });
     </script>
+
   </body>
 </html>
