--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mobile Menu Hamburger</title>
+    <title>dyne</title>
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
     <!--Using jQuery and jQuery UI for display effects-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 
     <!--Using the hamburger menu display code-->
-    <script src="js/hamburger.js"></script>
+    <script src="test.js"></script>
 
     <!--Using Media Queries, if the viewport is smaller than 700px use another stylesheet-->
-    <link rel="stylesheet" type="text/css" media="all" href="hamburger.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="test.css"/>
 </head>
 
 <body>
