--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <nav class="fixed-nav">
-      <img src="mf-logo.svg" height="30" />
+      <img src=23242190.png" height="30" />
     <ul> 
         <li><a href="#">Item 1</a></li>
         <li><a href="#">Item 2</a></li>
