--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
+    
+    <title>dyne</title
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <nav class="fixed-nav">
-      <img src=23242190.png" height="30" />
+      <img src=23242190.png height="30" />
     <ul> 
         <li><a href="#">Item 1</a></li>
         <li><a href="#">Item 2</a></li>
