--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 
 a unit of force that, acting on a mass of one gram, increases its velocity by one centimeter per second every 
-second along the direction that it acts. eu quam non rutrum. Donec at nibh erat. Integer congue nisl a aliquet 
-porttitor. Aliquam luctus rutrum metus vitae iaculis. Maecenas rhoncus feugiat massa vel commodo. Aliquam dignissim consectetur lacinia. Quisque finibus nibh nec est lobortis hendrerit. Vivamus ut ex id metus pellentesque lacinia non id ligula. Maecenas non tortor lobortis, fringilla velit sed, lobortis leo. </p>
+second along the direction that it acts. </p>
     </main>
  
     <style>
