--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <nav class="fixed-nav">
       <a href="index.html"><img src=23242190.png height="30" /></a>
     <ul> 
-        <li><a href="#">Item 1</a>dyne</li>
+        <li><a href="#">dyne</a></li>
         <li><a href="not_found">Item 2</a>locate</li>
-        <li><a href="#">Item 3</a></li>
+        <li><a href="#">code</a></li>
         
     </ul>
  
@@ -30,7 +30,7 @@ second along the direction that it acts. </p>
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #ddd;
+        background-color: ffffff;
  
         white-space: nowrap;
         height: 50px;
