--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <nav class="fixed-nav">
-        <a href="index.html"><img src=og.png height="30" /></a>
+        <a href="index.html"><img src=23242190.png height="30" /></a>
     <ul> 
         <li><a href="#">dyne</a></li>
         <li><a href="not_found">locate</a></li>
