--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
       <!-- ridiculous operator error-->
-      <p>dyne
+      <p style="color:#000000";><font face = "Arial,Helvetica">
         &nbsp; </p>
       
         &nbsp;
