--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 a unit of force that, acting on a mass of one gram, increases its velocity by one centimeter per second every 
 second along the direction that it acts. </p>
      
-Dynamism     
+Dynamism: 
 
 The theory that phenomena of matter or mind are due to the action of forces rather than to motion or matter.
      
