--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
  
   <tr>
    <p style="color:#000000";><font face = "Arial,Helvetica">
-a unit of force that, acting on a mass of one gram, increases its velocity by one centimeter per second every 
+Dyne: 
+
+     a unit of force that, acting on a mass of one gram, increases its velocity by one centimeter per second every 
 second along the direction that it acts. </p>
      
 Dynamism: 
