--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The theory that phenomena of matter or mind are due to the action of forces rath
 
 
   
-<a href = "https://iamtrask.github.io/2017/03/21/synthetic-gradients/>Deep Learning without Backpropagation</a>
+<a href = "https://iamtrask.github.io/2017/03/21/synthetic-gradients/">Deep Learning without Backpropagation</a>
            
 
            
