--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul> 
         <li><a href="#">dyne</a></li>
         <li><a href="not_found">locate</a></li>
-        <li><a href="#">code</a></li>
+        <li><a href="code.html">code</a></li>
         
     </ul>
  
