--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul> 
         <li><a href="#">dyne</a></li>
         <li><a href="not_found">locate</a></li>
-        <li><a href="code.html">code</a></li>
+        <li><a href="constants.txt">constants</a></li>
         
     </ul>
  
@@ -48,6 +48,7 @@ The theory that phenomena of matter or mind are due to the action of forces rath
   </tr>
  
 </table>	
+    
     &nbsp;</p>
   
     </center>
